# SimuEvol

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  PostProcessing.ipynb  README.md  SimuEvol.ipynb  codon.hpp  compil_src.sh  copy_data.sh  main.cpp  rm_data.sh
Manuscript/: MutationBias.tex  Polymorphism.tex  ProteinEvolution.tex
data/: ha.txt  lactamase.txt
data/matrices/: 1KG.chr1.singletons.mutmat.tsv  correlation2x2.tsv  correlation3x3_generation_time.tsv  correlation3x3_generation_timex2.tsv  correlation3x3_id.tsv  correlation3x3_mutation_rate.tsv  correlation3x3_ones.tsv  correlation3x3_population_size.tsv  correlation3x3_population_sizex2.tsv  correlation3x3_zero.tsv  correlation3x3x2.tsv  nucleotide_GTR.tsv  nucleotide_GTR_strong_AT_bias.tsv  precision3x3Diag.tsv  precision3x3Full.tsv  precision3x3Id.tsv  precision3x3Primates.tsv  precision4x4.tsv  precision_matrix.tsv
data/preferences/: create_preferences.py  equal_1.txt  equal_500.txt  equal_5000.txt  gal4_5000_10.prefs  gal4_5000_20.prefs  gal4_5000_30.prefs  gal4_5000_40.prefs  gal4_5000_50.prefs  gal4_5000_500.prefs  np_1800_498.prefs  np_300_498.prefs  np_5000_498.prefs  np_500_498.prefs  np_50_498.prefs  unif_1.prefs  unif_1.txt  unif_500.prefs  unif_500.txt  unif_5000.prefs  unif_5000.txt
data/trees/: mammal_subtree.tre  mammals.newick  name_internal_nodes_tree.py
manuscript/: notes.tex
scripts/: analysis.py  copy_data.sh  dnds_subsampling_species.py  empirical_analysis.py  empirical_inference.py  format_data.py  generate_hyphy_runs.py  generate_qsub.py  generate_qsub_BayesCode.py  globalDNDS_raw_jinja.bf  hyphy_jinja.py  projected_mut_sel.bf  projected_mut_sel.py  saturation_plot.py  sfs.py  simulated_analysis.py  simupoly_analysis.py  simurelax_analysis.py  simurelax_runs.py  theoretical_gBGC.py  theoretical_observations.py
src/: codon.hpp  combinatorial_stability.cpp  poly_dfe.cpp  poly_fold.cpp  poly_geo.cpp  poly_profile.cpp  poly_stab.cpp  simu_dfe.cpp  simu_div.cpp  simu_epistasis.cpp  simu_evol.cpp  simu_fold.cpp  simu_geo.cpp  simu_poly.cpp  simu_polyvol.cpp  simu_profile.cpp  simu_relax.cpp  simu_stab.cpp  toy_geometric.cpp  toy_stability.cpp
src/lib/: argparse.hpp  clonable_unique_ptr.hpp  codon.hpp  fitness.hpp  fitness_additive.hpp  fitness_dfe.hpp  fitness_folding.hpp  fitness_geometric.hpp  fitness_stability.hpp  folding.hpp  io.hpp  matrices.hpp  process.hpp  random.hpp  statistic.hpp  tree.hpp  wright_fisher.hpp
utils/docopt.cpp/: docopt.h
